sdk_tests/tests/pbc_contract_codegen/fail/shortname_bad_not_hex.stderr
error: custom attribute panicked
 --> tests/pbc_contract_codegen/fail/shortname_bad_not_hex.rs:7:1
  |
7 | #[action(shortname = 1)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid shortname, expecting a u32 hex literal, but got: 1
